--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
-    "uuid": "^8.1.0"
+    "uuid": "^8.1.0",
+    "websocket": "^1.0.31"
   },
   "scripts": {
     "start": "react-scripts start",
